--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   json_annotation: ^4.8.0
   flutter_hooks: ^0.18.6
   loop_page_view: ^1.2.1
+  flutter_animate: ^4.1.0
+  expandable_page_view: ^1.0.17
+  community_material_icon: ^5.9.55
 
 dev_dependencies:
   flutter_test:
