--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,10 @@ dependencies:
   community_material_icon: ^5.9.55
   flutter_riverpod: ^2.3.0
   dropdown_search: ^5.0.6
+  firebase_core: ^2.8.0
+  firebase_auth: ^4.3.0
+  cloud_firestore: ^4.4.5
+  cloud_functions: ^4.0.13
 
 dev_dependencies:
   flutter_test:
