--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   firebase_auth: ^4.3.0
   cloud_firestore: ^4.4.5
   cloud_functions: ^4.0.13
+  flutter_svg: ^2.0.4
 
 dev_dependencies:
   flutter_test:
