--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   cloud_firestore: ^4.4.5
   cloud_functions: ^4.0.13
   flutter_svg: ^2.0.4
+  entry: ^0.0.8+1
 
 dev_dependencies:
   flutter_test:
