--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   cloud_functions: ^4.0.13
   flutter_svg: ^2.0.4
   entry: ^0.0.8+1
+  google_sign_in: ^6.0.2
 
 dev_dependencies:
   flutter_test:
